将wenda加入到排序中去

--- a/_posts/2018-04-15-weeklyplan001.md
+++ b/_posts/2018-04-15-weeklyplan001.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "第一周计划"
 date:   2018-04-14 23:48:01 +0800
-categories: 计划
-tag: 周计划
+categories: plan
+tag: weeklyPlan
 ---
 * content
 {:toc}
