--- a/_posts/2018-04-15-weeklyplan001.md
+++ b/_posts/2018-04-15-weeklyplan001.md
@@ -7,8 +7,8 @@ tag: weeklyPlan
 ---
 * content
 {:toc}
-1. <font color=red> 准备 [__ipfs__ ](https://ipfs.io)和视频软件结合点, 并作出一个分享 ppt </font>
-2. <font color=red>完成 recomserver, wenda 排序项目</font>
+1. 准备 [__ipfs__ ](https://ipfs.io)和视频软件结合点, 并作出一个分享 ppt 
+2. 完成 recomserver, wenda 排序项目
 3. 学习 [分支限界法](https://www.zhihu.com/question/35701828/answer/64056686) 算法
 4. 阅读 [*Build Order Optimization in StarCraft*](https://pdfs.semanticscholar.org/dfd9/1e739bd979c08485a75fd11c501a6ec05118.pdf) 
 5. 阅读上论文后, 可以开始入门写星际争霸[BWAPI](http://github.com/bwapi/bwapi/releases) 使用, 以及这个论文阅读后的感受
