--- a/_posts/2018-08-26-dataVisWeek002.md
+++ b/_posts/2018-08-26-dataVisWeek002.md
@@ -41,7 +41,7 @@ And after the experiment, the authors gave an application to redesign several mu
 
 3. Framed-Rectangle Charts as replacements for Statistical Maps with Shading;
 
-    4. Graphs support data analysis.
+4. Graphs support data analysis.
 
 These replacements are based on previous elementary tasks. Take Pie Chart, for example, people hard to tell quantitive from an angle, even the wholeness. But bar charts or dot charts can great display quantitive greatly through position.
 
@@ -50,5 +50,7 @@ The experiments of proving the order of basic elements are preciseness. Subjecti
 Excepts for technology experiment, the author pointed out that a better plot should lead to more accurate judgments than others form.
 
  
+<font size="3" color="red">This is some text!</font>
+
 <center><iframe src="https://public.tableau.com/views/ATaleof50Cities/ATaleof50Cities?:embed=y&:display_count=yes&:toolbar=no" width="1004" height="1269" frameborder="0"></iframe></center>
 
